1. For Java 9+, VM argument --add-opens java.base/java.util.concurrent=ALL-UNNAMED is needed